# rankers

./: .env.example  .envrc  Cargo.toml  Earthfile  README.md  flake.nix  justfile  notes.md  process-compose.yaml  rust-toolchain.toml  send_vote_event.sh
data/: .gitignore
migrations/: 20241122221757_init_db.sql
notes/: notes.md  roadmap.md  todo.md
qnmodel/: flake.nix  test.Rmd
scripts/: check_availability.sh  dev_setup.sh  seed.sh
sim/: flake.nix  package-lock.json  package.json  run.ts
simulation/: Manifest.toml  Project.toml  client.jl  flake.nix  model.jl  simulation.jl  util.jl
src/: api.rs  calc_sample_space_stats.rs  database.rs  error.rs  http_server.rs  main.rs  model.rs  scheduler.rs  upvote_rate.rs  util.rs
src/algs/: README.md  hacker_news.rs  mod.rs  newest.rs  quality_news.rs
src/algs/quality_news/: model.rs  repository.rs
src/common/: error.rs  model.rs
src/probability/: mod.rs  probability_models.rs
