[package]
name = "ranking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
anyhow = "1.0.93"
